# kalker

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build-rust.yml  build.yml  publish.yml  release.yml
cli/: Cargo.toml  build.rs  help.txt
cli/src/: main.rs  output.rs  repl.rs
cli/wix/: License.rtf  main.wxs
kalk/: Cargo.toml  README.md  wasm-build.sh
kalk/fuzz/: Cargo.toml
kalk/fuzz/fuzz_targets/: parse.rs
kalk/scripts/: generate_funcs_test_cases.py
kalk/src/: analysis.rs  ast.rs  calculation_result.rs  calculus.rs  errors.rs  integration_testing.rs  interpreter.rs  inverter.rs  kalk_num.rs  lexer.rs  lib.rs  numerical.rs  parser.rs  prelude.rs  radix.rs  symbol_table.rs  test_helpers.rs  text_utils.rs
kalk/src/kalk_num/: mod.rs  regular.rs  with_rug.rs
kalk/src/kalk_value/: mod.rs  regular.rs  rounding.rs  with_rug.rs
kalk/src/prelude/: mod.rs  regular.rs  with_rug.rs
kalk_cli/: Cargo.toml  build.rs  help.txt  run.command
kalk_cli/src/: main.rs  output.rs  repl.rs
kalk_cli/wix/: main.wxs
kalk_mobile/: .gitignore  capacitor.config.json  gulpfile.esm.js  package-lock.json  package.json
kalk_mobile/android/app/: build.gradle
kalk_mobile/android/app/src/main/: AndroidManifest.xml
kalk_mobile/android/app/src/main/res/values/: strings.xml
kalk_mobile/android/app/src/main/res/xml/: config.xml
kalk_mobile/electron/: .gitignore  capacitor.config.json  package-lock.json  package.json  preloader.js  tsconfig.json
kalk_mobile/electron/src/: index.ts
kalk_mobile/www/: index.html
kalk_mobile/www/style/: style.css  style.min.css  style.sass
kalk_web/: README.md  index.html  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
kalk_web/public/: global.css  index.html
kalk_web/src/: App.svelte  Calculator.svelte  ConsoleLine.svelte  KalkCalculator.svelte  global.d.ts  main-dev.ts  main.ts  public-path.js
kalk_web/src/styles/: index.scss
lek/: Cargo.toml
lek/src/: interpreter.rs  parser.rs  symbol_table.rs
lek_cli/: Cargo.toml
lek_cli/src/: main.rs  output.rs  repl.rs
metadata/en-US/: full_description.txt  short_description.txt  title.txt
mobile/: capacitor.config.json  extract-version.py  fdroid-prepare.sh  gulpfile.esm.js  package-lock.json  package.json  remove-proprietary.sh  version.txt
mobile/android/: build.gradle  variables.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/assets/: capacitor.config.json
mobile/android/app/src/main/java/net/strct/kalk/: MainActivity.java
mobile/android/app/src/main/java/net/strct/kalker/: MainActivity.java
mobile/android/app/src/main/res/drawable/: launch_splash.xml
mobile/android/app/src/main/res/values/: strings.xml
mobile/www/: capacitor.js  index.html
mobile/www/style/: style.min.css  style.sass
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  math_parser.rs  parser.rs  prelude.rs  symbol_table.rs  visitor.rs
tests/: basics.kalker  comparisons.kalker  comprehensions.kalker  derivation.kalker  equation_systems.kalker  equations.kalker  functions.kalker  groups.kalker  integration.kalker  matrices.kalker  precedence.kalker  radix.kalker  recursion.kalker  redefining.kalker  sum.kalker  unicode.kalker  variables.kalker  vectors.kalker
tests/ambiguities/: comparison_in_function.kalker  fn_call_no_parenthesis.kalker
tests/matrices/: operations.kalker  transpose.kalker
web/: .gitignore  README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts  webpack.config.ts
web/public/: index.html
web/src/: ConsoleLine.svelte  KalkCalculator.svelte  kalker.css  main.ts  public-path.js
wix/: main.wxs
