[package]
name = "kalk"
version = "1.3.0"
authors = ["PaddiM8"]
edition = "2018"
readme = "README.md"
description = "A math evaluator library that supports user-defined functions, variables and units, and can handle fairly ambiguous syntax."
repository = "https://github.com/PaddiM8/kalk/tree/master/kalk"
license = "MIT"
keywords = ["math", "calculator", "evaluator"]
categories = ["mathematics", "parser-implementations"]

[dependencies]
rug = { version = "1.11.0", features = ["float"], optional = true }
test-case = "1.0.0"
regex = "1"
lazy_static = "1.4.0"
special = "0.8.1"

[features]
default = ["rug"]