[package]
name = "kalk"
version = "3.2.1"
authors = ["PaddiM8"]
edition = "2018"
readme = "README.md"
description = "A math evaluator library that supports user-defined functions, variables and units, and can handle fairly ambiguous syntax."
repository = "https://github.com/PaddiM8/kalker/tree/master/kalk"
license = "MIT"
keywords = ["math", "calculator", "evaluator"]
categories = ["mathematics", "parser-implementations"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rug = { version = "1.24.0", features = ["float"], optional = true }
lazy_static = "1.4.0"
wasm-bindgen = "0.2.69"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"
test-case = "1.0.0"
regex = "1"

[features]
default = ["rug"]

# Breaks when optimizing for some reason.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
