[package]
name = "kalk"
version = "3.2.2"
authors = ["PaddiM8"]
edition = "2018"
readme = "README.md"
description = "A math evaluator library that supports user-defined functions, variables and units, and can handle fairly ambiguous syntax."
repository = "https://github.com/PaddiM8/kalker/tree/master/kalk"
license = "MIT"
keywords = ["math", "calculator", "evaluator"]
categories = ["mathematics", "parser-implementations"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rug = { version = "1.28.0", features = ["float"], optional = true }
gmp-mpfr-sys = { version = "1.6.8", default-features = false, features = ["mpfr", "c-no-tests"], optional = true }
lazy_static = "1.4.0"
wasm-bindgen = "0.2.69"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"
test-case = "1.0.0"
regex = "1"

[features]
default = ["rug", "gmp-mpfr-sys"]
# Link against system GMP/MPFR instead of building them from source.
# Speeds up compilation but complicates releases, disabled by default
use-system-libs = ["gmp-mpfr-sys/use-system-libs"]

# Breaks when optimizing for some reason.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
