[package]
name = "kalk_cli"
version = "0.3.3"
authors = ["PaddiM8"]
edition = "2018"
readme = "../README.md"
description = "A calculator that supports user-defined functions, variables and units, and can handle fairly ambiguous syntax."
repository = "https://github.com/PaddiM8/kalk"
license = "MIT"
keywords = ["math", "calculator", "cli", "command-line"]
categories = ["mathematics", "command-line-utilities"]

[[bin]]
path = "src/main.rs"
name = "kalk"

[dependencies]
kalk = { path = "../kalk", version = "^0.2.3" }
rustyline = "7.0.0"
ansi_term = "0.12"
regex = "1"
rug = "1.11.0"
lazy_static = "1.4.0"
