[package]
name = "kalk_cli"
version = "0.3.8"
authors = ["PaddiM8"]
edition = "2018"
readme = "../README.md"
description = "A calculator that supports user-defined functions, variables and units, and can handle fairly ambiguous syntax."
repository = "https://github.com/PaddiM8/kalk"
license = "MIT"
keywords = ["math", "calculator", "cli", "command-line"]
categories = ["mathematics", "command-line-utilities"]
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "kalk"

[dependencies]
kalk = { path = "../kalk", version = "^1.2.6" }
rustyline = "7.0.0"
ansi_term = "0.12"
regex = "1"
lazy_static = "1.4.0"
seahorse = "1.1.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "kalk"
identifier = "net.strct.kalk"
icon = ["../res/icon*"]
short_description = "A calculator that supports user-defined functions, variables and units, and can handle fairly ambiguous syntax."

[package.metadata.bundle.bin.kalk]
name = "kalk"
